# kestrel-cloud-gcp

./: AGENTS.md  README.md  gcp_compute_config.toml  pyproject.toml
.github/workflows/: ci.yml  publish.yml
kestrel_cloud_gcp/: __init__.py  cloudrun.py
kestrel_cloud_gcp/compute/: __init__.py  core.py  feature.py  manager.py  models.py  ssh_training.py  workflows.py
tests/: conftest.py  test_cloud_launcher_contracts.py  test_deploy_cloudrun.py  test_feature.py  test_gcp_compute_e2e.py  test_gcp_compute_feature_contracts.py
